--- a/Danvo/index.html
+++ b/Danvo/index.html
@@ -74,5 +74,11 @@
     <!-- JavaScript Files -->
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
     <script src="app.js"></script>
+        <script>
+        if (location.pathname.slice(-5) !== ".html" && location.pathname !== "/") {
+            var newURL = location.pathname + ".html" + location.hash + location.search;
+            window.history.replaceState({}, document.title, newURL);
+        }
+    </script>
   </body>
 </html>
