--- a/Danvo/index.html
+++ b/Danvo/index.html
@@ -75,10 +75,12 @@
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
     <script src="app.js"></script>
         <script>
-        if (location.pathname.slice(-5) === ".html") {
-            var newURL = location.pathname.slice(0, -5) + location.hash + location.search;
-            window.history.replaceState({}, document.title, newURL);
-        }
+        document.addEventListener("DOMContentLoaded", function() {
+            if (location.pathname.endsWith(".html") && location.pathname !== "/") {
+                var newURL = location.pathname.slice(0, -5) + location.hash + location.search;
+                window.history.replaceState({}, document.title, newURL);
+            }
+        });
     </script>
   </body>
 </html>
