--- a/Hamburguer/index.html
+++ b/Hamburguer/index.html
@@ -19,7 +19,7 @@
                 <li class="nav-item"><a href="#">Contato</a></li>
                 <i class='bx bx-search'></i>
             </ul>
-            <div onclick="alert('Está página faz parte de um Portfolio! Ela não funciona.')" class="menu">
+            <div class="menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
