--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           <div class="portfolio-layer">
             <h4>Danvo</h4>
             <p>Landing Page Responsiva!</p>
-            <a href="../Danvo/index.html"><i class="bx bx-link-external"></i></a>
+            <a href="./Danvo/index.html"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
         <div class="portfolio-box">
@@ -154,7 +154,7 @@
           <div class="portfolio-layer">
             <h4>Bite Burg</h4>
             <p>Landing Page Responsiva! Sobre Hamburgueria!</p>
-            <a href="../Hamburguer/index.html"><i class="bx bx-link-external"></i></a>
+            <a href="./BiteBurg/index.html"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
 
