--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <a onclick="alert('Ops, este projeto ainda não está pronto.')" href=""><i class="bx bx-link-external"></i></a>
+            <a href="./ClipX/"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
         <div class="portfolio-box">
