--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           <img src="Images/portfolio1.jpg" alt="">
           <div class="portfolio-layer">
             <h4>Danvo</h4>
-            <p>Landing Page Responsiva!</p>
+            <p>Landing Page Responsiva! Sobre Digital!</p>
             <a href="./Danvo/"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
@@ -161,8 +161,8 @@
         <div class="portfolio-box">
           <img src="Images/portfolio3.jpg" alt="">
           <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <h4>ClipX</h4>
+            <p>Landing Page Responsiva! Sobre App!</p>
             <a href="./ClipX/"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
