--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
           <img src="Images/portfolio1.jpg" alt="">
           <div class="portfolio-layer">
             <h4>Danvo</h4>
-            <p>Landing Page Responsiva! Sobre Digital!</p>
-            <a href="./Danvo/"><i class="bx bx-link-external"></i></a>
+            <p>Landing Page Responsiva!</p>
+            <a href="../Danvo/index.html"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
         <div class="portfolio-box">
@@ -154,16 +154,16 @@
           <div class="portfolio-layer">
             <h4>Bite Burg</h4>
             <p>Landing Page Responsiva! Sobre Hamburgueria!</p>
-            <a href="./BiteBurg/"><i class="bx bx-link-external"></i></a>
+            <a href="../Hamburguer/index.html"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
 
         <div class="portfolio-box">
           <img src="Images/portfolio3.jpg" alt="">
           <div class="portfolio-layer">
-            <h4>ClipX</h4>
-            <p>Landing Page Responsiva! Sobre App!</p>
-            <a href="./ClipX/"><i class="bx bx-link-external"></i></a>
+            <h4>Web Design</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <a onclick="alert('Ops, este projeto ainda não está pronto.')" href=""><i class="bx bx-link-external"></i></a>
           </div>
         </div>
         <div class="portfolio-box">
@@ -198,7 +198,7 @@
     <section class="contato" id="Contato">
       <h2 class="heading">contate-<span class="span span5">me!</span></h2>
 
-      <form method="post">
+      <form id="contact-form" method="post">
         <div class="input-box">
           <input id="name" type="text" placeholder="Nome">
           <input id="email" type="email" placeholder="Email">
@@ -206,8 +206,9 @@
         <div class="input-box-2">
           <input id="assunto" type="text" placeholder="Assunto do email">
         </div>
-        <textarea id="text" name="" id="" cols="30" rows="10" placeholder="Sua mensagem"></textarea>
-        <input id="btn" type="submit" value="Enviar" class="btn btn4">
+        <textarea id="text" name="" cols="30" rows="10" placeholder="Sua mensagem"></textarea>
+        <p id="contact-message"></p>
+        <button id="btn" type="submit" class="btn btn4">Enviar</button>
       </form>
     </section>
 
@@ -232,29 +233,6 @@
     <script src="js/script.js"></script>
 
     <!-- form contact -->
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
-
-    <script>
-    var btn = document.getElementById('btn');
-    btn.addEventListener('click', function(e) {
-    e.preventDefault();
-
-    var name = document.getElementById('name').value;
-    var email = document.getElementById('email').value;
-    var assunto = document.getElementById('assunto').value;
-    var text = document.getElementById('text').value;
-    var body = 'Nome: ' + name + '<br/> Email: ' + email + '<br/> Assunto: ' + assunto + '<br/> Mensagem: ' + text;
-
-    Email.send({
-        SecureToken: "ea131c1e-b449-4bc2-a4b2-0409dcde5b9f",
-        To: 'higorxzz.oficial@gmail.com',
-        From: "agencia.webflame@gmail.com",
-        Subject: "Mensagem",
-        Body: body
-    }).then(
-        message => alert(message)
-    );
-});
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   </body>
 </html>
