--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -200,15 +200,15 @@
 
       <form id="contact-form" method="post">
         <div class="input-box">
-          <input id="name" type="text" placeholder="Nome">
-          <input id="email" type="email" placeholder="Email">
+          <input name="name" id="name" type="text" placeholder="Nome">
+          <input name="email" id="email" type="email" placeholder="Email">
         </div>
         <div class="input-box-2">
-          <input id="assunto" type="text" placeholder="Assunto do email">
+          <input name="assunto" id="assunto" type="text" placeholder="Assunto do email">
         </div>
-        <textarea id="text" name="" cols="30" rows="10" placeholder="Sua mensagem"></textarea>
-        <p id="contact-message"></p>
-        <button id="btn" type="submit" class="btn btn4">Enviar</button>
+        <textarea name="text" id="text" cols="30" rows="10" placeholder="Sua mensagem"></textarea>
+        <h2 id="contact-message"></h2>
+        <button name="btn" id="btn" type="submit" class="btn btn4">Enviar</button>
       </form>
     </section>
 
