--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -142,55 +141,56 @@
       <h2 class="heading"><span class="span span4">Projetos</span> mais recentes</h2>
       <div onclick="alerta()" class="portfolio-container">
         <div class="portfolio-box">
-          <img src="Images/portfolio1.jpg" alt="">
+          <img src="Images/Adex.png" alt="">
+          <div class="portfolio-layer">
+            <h4>Adex</h4>
+            <p>Landing Page Responsiva! Sobre Projetos!</p>
+            <a href="./Adex/index.html" target="_blank"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+        <div class="portfolio-box">
+          <img src="/Images/Danvo.png" alt="">
           <div class="portfolio-layer">
             <h4>Danvo</h4>
-            <p>Landing Page Responsiva!</p>
-            <a href="../Danvo/index.html"><i class="bx bx-link-external"></i></a>
+            <p>Landing Page Responsiva! Sobre Digital!</p>
+            <a href="./Danvo/index.html" target="_blank"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="Images/ClipX.png" alt="">
+          <div class="portfolio-layer">
+            <h4>ClipX</h4>
+            <p>Landing Page Responsiva! Sobre App!</p>
+            <a href="./ClipX/index.html" target="_blank"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
         <div class="portfolio-box">
-          <img src="Images/portfolio2.jpg" alt="">
+          <img src="Images/BiteBurg.png" alt="">
           <div class="portfolio-layer">
-            <h4>Bite Burg</h4>
+            <h4>BiteBurg</h4>
             <p>Landing Page Responsiva! Sobre Hamburgueria!</p>
-            <a href="../Hamburguer/index.html"><i class="bx bx-link-external"></i></a>
+            <a href="./BiteBurg/index.html" target="_blank"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
 
-        <div class="portfolio-box">
-          <img src="Images/portfolio3.jpg" alt="">
-          <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <a onclick="alert('Ops, este projeto ainda não está pronto.')" href=""><i class="bx bx-link-external"></i></a>
-          </div>
-        </div>
-        <div class="portfolio-box">
-          <img src="Images/portfolio4.jpg" alt="">
-          <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <a onclick="alert('Ops, este projeto ainda não está pronto.')" href=""><i class="bx bx-link-external"></i></a>
-          </div>
-        </div>
-
-        <div class="portfolio-box">
+        <div style="display: none;" class="portfolio-box">
           <img src="Images/portfolio5.jpg" alt="">
           <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <a onclick="alert('Ops, este projeto ainda não está pronto.')" href=""><i class="bx bx-link-external"></i></a>
+            <h4>ClipX</h4>
+            <p>Landing Page Responsiva! Sobre App</p>
+            <a href="./ClipX/index.html"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
 
-        <div class="portfolio-box">
+        <div style="display: none;" class="portfolio-box">
           <img src="Images/portfolio6.jpg" alt="">
           <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <a onclick="alert('Ops, este projeto ainda não está pronto.')" href=""><i class="bx bx-link-external"></i></a>
+            <h4>ClipX</h4>
+            <p>Landing Page Responsiva! Sobre App</p>
+            <a href="./ClipX/index.html"><i class="bx bx-link-external"></i></a>
           </div>
+        </div>
         </div>
       </div>
     </section>
